# timed-media

./: .gitignore  README.md  mmedia.cabal  mmedia.cabal~  timed-media.cabal
MMedia/: Audio.hs  Audio.hs~  Timecode.hs  Timeline.hs  Timeline.hs~
MMedia/Audio/: ALSAPlay.hs  ALSAPlay.hs~  Example.hs  Example.hs~  SimpleFileIO.hs
MMedia/Audio/FX/Filter/: SimpleIIR.hs
MMedia/MiscUtil/: Data.hs
MMedia/Timecode/: Arith.hs  Internal.hs
Media/Timed/: Audio.hs  Multiplex.hs  Timecode.hs  Timeline.hs
Media/Timed/Audio/: ALSAPlay.hs  Channels.hs  Example.hs  SimpleFileIO.hs  Stream.hs
Media/Timed/Audio/FX/Filter/: SimpleIIR.hs
Media/Timed/MiscUtil/: Data.hs
Media/Timed/Multiplex/: HList.hs
Media/Timed/Timecode/: Arith.hs  Internal.hs
test/: .aplaysimplemelody-lpnonlin.hs.kate-swp  SuperSimple-Synth.ipynb  TlChunk.hs  aplayWAVfile0.hs  aplaysilence.hs  aplaysimple-audiofn.hs  aplaysimplemelody-lp1.hs  aplaysimplemelody-lp2.hs  aplaysimplemelody-lpnonlin.hs  aplaysimplemelody-oversampled.hs  aplaysimplemelody-stereo.hs  aplaysimplemelody.hs  aplaysimplesine  aplaysimplesine.hs  aplyspleoutp.wvcd  lp1stCoeffs.hs
