Name:                mmedia
Version:             0.1
Description:         Chunk-based multimedia handling, for use in DAW/NLEs
License:             GPL-3
License-file:        COPYING
Author:              Justus Sagemüller
Maintainer:          sagemuej@smail.uni-koeln.de
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Build-Depends:     base >= 3, bytestring, binary, process, vector
  Exposed-modules:   MMedia.Timeline MMedia.Timecode MMedia.Timecode.Arith MMedia.Timecode.Internal
                     MMedia.Audio MMedia.Audio.Example MMedia.Audio.ALSAPlay
  ghc-options:       -O2
